<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="a_star">A*</string>
    <string name="action_quit">Quit</string>
    <string name="action_settings">Settings</string>
    <string name="adnative_small">ca-app-pub-4434536017055893/4518584077</string>
    <string name="adnativelarge">ca-app-pub-4434536017055893/1053201534</string>
    <string name="advanced_setting">Advanced setting</string>
    <string name="alternate_route">Alternate route</string>
    <string name="app_name">GPS World Offline Map: Live Driving Route Guide</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-4434536017055893/8492707854</string>
    <string name="bidirectional_a_star">Bidirectional A*</string>
    <string name="bidirectional_dijkstra">Bidirectional Dijkstra</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="change_map">Change map</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_from_favorite">Choose from favorite</string>
    <string name="delete_map_msg">Confirm to delete map form your mobile!</string>
    <string name="dialog_stop_save_tracking">Stop and save tracking ?</string>
    <string name="directions">Directions</string>
    <string name="distance">Distance</string>
    <string name="download_map">Download map</string>
    <string name="fastest">Fastest</string>
    <string name="from_loc">From</string>
    <string name="from_location">From Location</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4434536017055893/2275795621</string>
    <string name="intro_message">This sample uses the PlaceAutocomplete Activity from the Places API for Android to open a fullscreen autocomplete widget when the button is pressed.</string>
    <string name="km">km</string>
    <string name="loading_dotdotdot">Loading ...</string>
    <string name="meter">m</string>
    <string name="navigation">Navigation</string>
    <string name="ok">OK</string>
    <string name="on_google_map">On Google Map</string>
    <string name="one_to_many_dijkstra">One to many Dijkstra</string>
    <string name="open_activity">Open Autocomplete Activity</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_finding">Pathfinding</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="place_details">&lt;b>%1$s&lt;/b> &lt;br/> &lt;i>Place Id: %2$s&lt;/i> &lt;br/> Address: %3$s &lt;br/> Phone: %4$s &lt;br/> Website: %5$s</string>
    <string name="point_on_map">Point on map</string>
    <string name="remove">Remove</string>
    <string name="routing_algorithm">Routing algorithm</string>
    <string name="save">Save</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="settings">Settings</string>
    <string name="shortest">Shortest</string>
    <string name="show_my_position">Show My Position</string>
    <string name="stop">Stop</string>
    <string name="stop_navigation">Stop navigation</string>
    <string name="stop_navigation_msg">dismiss current navigation?</string>
    <string name="time">Time</string>
    <string name="title_activity_analytics">Analytics</string>
    <string name="title_activity_download">Offline</string>
    <string name="title_activity_main">Map Setting</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_select">Select a map</string>
    <string name="to_loc">To</string>
    <string name="to_location">To Location</string>
    <string name="tracking_start">start ?</string>
    <string name="tracking_stop">stop ?</string>
    <string name="travel_mode">Travel mode</string>
    <string name="travel_mode_bike">Bike</string>
    <string name="travel_mode_car">Car</string>
    <string name="travel_mode_foot">Foot</string>
    <string name="unidirectional_a_star">Unidirectional A*</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="visit_home_page">Visit home page</string>
    <string name="weighting_fastest">Fastest</string>
    <string name="weighting_shortest">Shortest</string>
</resources>
