<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/nav_settings_to_layout" android:background="@color/my_primary" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center|left" android:id="@id/nav_settings_to_header" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/header_image_view" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:src="@drawable/ic_location_start_white_24dp" />
        <TextView android:textSize="16.0sp" android:textColor="@color/my_divider" android:id="@id/map_nav_settings_to_local" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to_location" android:layout_toRightOf="@id/header_image_view" android:layout_centerVertical="true" />
        <ImageButton android:id="@id/nav_settings_to_clear_btn" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_keyboard_arrow_down_white_24dp" android:layout_alignParentRight="true" />
        <View android:background="@color/my_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_below="@id/header_image_view" />
    </RelativeLayout>
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/map_nav_settings_to_favorite" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/nav_settings_to_header">
        <ImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:src="@drawable/ic_star_outline_white_24dp" />
        <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_from_favorite" />
    </LinearLayout>
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/map_nav_settings_to_point" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/map_nav_settings_to_favorite">
        <ImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:src="@drawable/ic_filter_center_focus_white_24dp" />
        <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/point_on_map" />
    </LinearLayout>
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/map_nav_settings_to_current" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/map_nav_settings_to_point">
        <ImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:src="@drawable/ic_my_location_white_24dp" />
        <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_current_location" />
    </LinearLayout>
</RelativeLayout>